--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
     "@ant-design/icons": "^5.5.2",
-    "ahooks": "^3.8.4",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
@@ -26,6 +25,7 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/node": "^22.10.1",
     "@types/qs": "^6.9.17",
@@ -33,11 +33,11 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "click-to-react-component": "^1.1.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.13.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.4.49",
     "postcss-load-config": "^6.0.1",
@@ -46,6 +46,7 @@
     "tailwindcss": "^3.4.16",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0",
     "vite": "^6.0.3",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-progress": "^0.0.7",
