--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "remove packages": "rimraf ./node_modules"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
@@ -29,8 +30,8 @@
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/node": "^22.10.1",
     "@types/qs": "^6.9.17",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
@@ -53,6 +54,6 @@
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
